# minishell

./: .gitignore  Makefile  Makefile.am  README.md  autogen.sh  clear.c  configure.ac  error.c  executor.c  executor.h  expand_dollar.c  helpers.c  lex.c  lex.h  main.c  main_helpers.c  malloc_debug.c  malloc_debug.h  minishell  minishell.h  parser.c  sigs.c  sigs.h  utils.c
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
include/: aux.h  builtins.h  env_state.h  env_vars.h  error.h  executor.h  free.h  get_next_line.h  global.h  lex.h  libft.h  parse_tree.h  parser.h  tokens.h
lib/aux/: clear.c  error.c  helpers.c
lib/builtins/: builtins.c  builtins_private.h  cd.c  cd_pwd.c  check_builtins.c  echo.c  env_unset.c  export.c  ft_env_unset.c  ft_exit.c  pwd.c
lib/env_vars/: env_utils.c  env_vars.c  set_env_vars.c
lib/error/: error.c
lib/executor/: exec_pipelist_item.c  executor.c  executor_private.h  find_and_exec_cmd.c  find_and_exec_cmd_utils.c  fork_and_builtin.c  helpers.c  (+2 more)
libft/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  (+3 more)
(+62 files in other folders)
